Se agregó set_producto_v y con esto los pasos realizados hasta el inciso 5 de la práctica

--- a/practicas/p08/formulario_productos.html
+++ b/practicas/p08/formulario_productos.html
@@ -17,7 +17,7 @@
 
     <p>En esta sección se registran los nuevos productos que lleguen a la empresa</p>
 
-    <form id="formularioProductos" action="http://localhost/tecweb/practicas/p08/set_producto.php" method="post">
+    <form id="formularioProductos" action="http://localhost/tecweb/practicas/p08/set_producto_v2.php" method="post">
 
     <h2>Información del Producto</h2>
 
@@ -26,12 +26,11 @@
 
         <ul>
           <li><label for="form-name">Nombre del producto:</label> <input type="text" name="name" id="form-name"></li>
-          <li><label for="form-brand">Marca del producto:</label> <input type="text" name="email" id="form-email"></li>
-          <li><label for="form-model">Modelo del producto:</label> <input type="text" name="phone" id="form-tel"></li>
-          <li><label for="form-price">Precio del producto:</label> <input type="text" name="phone" id="form-tel"></li>
-          <li><label for="form-description">Escribe la descripción del producto</label><br><textarea name="story" rows="4" cols="60" id="form-story" placeholder="Escribe algo aquí..."></textarea></li>
-          <li><label for="form-unit">Unidades del producto:</label> <input type="text" name="phone" id="form-tel"></li>
-          <li><label for="form-picture">Imágen del producto:</label> <input type="text" name="phone" id="form-tel"></li>
+          <li><label for="form-brand">Marca del producto:</label> <input type="text" name="brand" id="form-email"></li>
+          <li><label for="form-model">Modelo del producto:</label> <input type="text" name="model" id="form-tel"></li>
+          <li><label for="form-price">Precio del producto:</label> <input type="text" name="price" id="form-tel"></li>
+          <li><label for="form-description">Escribe la descripción del producto</label><br><textarea name="description" rows="4" cols="60" id="form-story" placeholder="Escribe algo aquí..."></textarea></li>
+          <li><label for="form-unit">Unidades del producto:</label> <input type="text" name="unit" id="form-tel"></li>
         </ul>
       </fieldset>
 
