--- a/actividades/Complemento_p11/p11_con_jquery/product_app/index.html
+++ b/actividades/Complemento_p11/p11_con_jquery/product_app/index.html
@@ -35,7 +35,14 @@
                   <input class="form-control" type="text" id="name" placeholder="Nombre de producto">
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" id="description" cols="30" rows="10" placeholder="JSON de producto"></textarea>
+                  <input class="form-control" type="text" id="cost" placeholder="Precio del producto">
+                  <input class="form-control" type="text" id="unit" placeholder="Unidades del producto">
+                  <input class="form-control" type="text" id="model" placeholder="Modelo del producto">
+                  <input class="form-control" type="text" id="brand" placeholder="Marca del producto">
+                  <input class="form-control" type="text" id="image" placeholder="Imagen del producto (opcional)">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" id="description" cols="10" rows="5" placeholder="Describe el producto"></textarea>
                 </div>
                 <input type="hidden" id="productId">
                 <button class="btn btn-primary btn-block text-center" type="submit">
